apps/media-services/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - name: vpn
        image: qmcgaw/gluetun:latest
        ports:
        - containerPort: 8080
          name: qbittorrent-web
        - containerPort: 6881
          name: qbittorrent-tcp
        - containerPort: 6881
          name: qbittorrent-udp
          protocol: UDP
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
            - SYS_MODULE
          privileged: true
        volumeMounts:
        - name: qbittorrent-config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
      - name: qbittorrent
        image: ghcr.io/linuxserver/qbittorrent:latest
        ports:
        - containerPort: 8080
          name: web
        volumeMounts:
        - name: qbittorrent-config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
        - name: vuetorrent-webui
          mountPath: /vuetorrent
      volumes:
      - name: qbittorrent-config
        persistentVolumeClaim:
          claimName: qbittorrent-config
      - name: vuetorrent-webui
        persistentVolumeClaim:
          claimName: vuetorrent-webui
      - name: downloads
        hostPath:
          path: /mnt/data/downloads
          type: Directory
