apps/media-services/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
  - name: web
    port: 8080
    targetPort: 8080
  type: ClusterIP
